--- a/Assets/My Assets/UI/UI_AtRuntime/mainUI.uxml
+++ b/Assets/My Assets/UI/UI_AtRuntime/mainUI.uxml
@@ -3,4 +3,5 @@
     <engine:VisualElement name="NarratorWindow" style="flex-grow: 1; top: 0; width: 100%; height: 50%; max-height: 50%; max-width: 100%; min-height: 50%;">
         <engine:Label text="Narration Text" name="NarratorText" style="height: 50%; max-height: 50%; min-height: 50%;" />
     </engine:VisualElement>
+    <engine:VisualElement name="CombatantButtons" style="flex-grow: 1; right: 0; flex-direction: row-reverse; height: 50%; max-height: 50%; min-height: 50%; max-width: 50%; min-width: 50%; width: 50%; bottom: 0; position: absolute;" />
 </engine:UXML>
