--- a/Assets/My Assets/UI/UI_AtRuntime/mainUI.uxml
+++ b/Assets/My Assets/UI/UI_AtRuntime/mainUI.uxml
@@ -7,7 +7,7 @@
     <engine:VisualElement name="CharInfoPanel" style="flex-grow: 1; position: absolute; top: 0; right: 0; height: 50%; width: 50%; max-height: 50%; max-width: 50%; min-height: 50%; min-width: 50%;">
         <engine:Label text="Label" name="CharInfo" style="flex-wrap: wrap;" />
     </engine:VisualElement>
-    <engine:VisualElement name="AbilityInfoPanel" style="flex-grow: 1; top: 3px; position: absolute; right: 0; flex-wrap: wrap-reverse; height: 50%; max-height: 50%; min-height: 50%; width: 50%; max-width: 50%; min-width: 50%;">
+    <engine:VisualElement name="AbilityInfoPanel" style="flex-grow: 1; top: 3px; position: absolute; right: 0; flex-wrap: wrap; height: 50%; max-height: 50%; min-height: 50%; width: 50%; max-width: 50%; min-width: 50%; flex-basis: auto; white-space: pre-wrap;">
         <engine:Label name="AbilityInfo" style="top: 0; flex-wrap: wrap;" />
     </engine:VisualElement>
 </engine:UXML>
