--- a/Assets/My Assets/UI/UI_AtRuntime/mainUI.uxml
+++ b/Assets/My Assets/UI/UI_AtRuntime/mainUI.uxml
@@ -10,4 +10,5 @@
     <engine:VisualElement name="AbilityInfoPanel" style="flex-grow: 1; top: 3px; position: absolute; right: 0; flex-wrap: wrap; height: 50%; max-height: 50%; min-height: 50%; width: 50%; max-width: 50%; min-width: 50%; flex-basis: auto; white-space: pre-wrap; text-overflow: ellipsis;">
         <engine:Label name="AbilityInfo" style="top: 0; flex-wrap: wrap;" />
     </engine:VisualElement>
+    <engine:TextField label="Text Field" placeholder-text="filler text" name="TextField" style="flex-basis: auto; width: 30%; max-width: 30%; min-width: 30%;" />
 </engine:UXML>
