--- a/Assets/My Assets/UI/UI_AtRuntime/mainUI.uxml
+++ b/Assets/My Assets/UI/UI_AtRuntime/mainUI.uxml
@@ -1,14 +1,14 @@
 <engine:UXML xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:engine="UnityEngine.UIElements" xmlns:editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
     <engine:VisualElement name="PlayerOptions" style="flex-grow: 1; align-self: flex-start; max-width: 50%; min-width: 50%; height: 50%; max-height: 50%; min-height: 50%; align-content: flex-end; flex-direction: column; flex-wrap: wrap; bottom: 0; left: auto; position: absolute;" />
-    <engine:VisualElement name="NarratorWindow" style="flex-grow: 1; top: 0; width: 100%; height: 50%; max-height: 50%; max-width: 100%; min-height: 50%;">
-        <engine:Label text="Narration Text" name="NarratorText" style="height: 50%; max-height: 50%; min-height: 50%; flex-wrap: wrap;" />
-    </engine:VisualElement>
+    <engine:VisualElement name="LeftCreationPanel" style="flex-grow: 1; position: absolute; width: 25%; height: 100%; max-width: 25%; max-height: 100%; min-width: 25%; min-height: 100%;" />
+    <engine:Label name="NarratorText" style="height: 50%; max-height: 50%; min-height: 50%; flex-wrap: wrap;" />
+    <engine:VisualElement name="NarratorWindow" enabled="true" style="flex-grow: 1; top: 0; width: 100%; height: 50%; max-height: 50%; max-width: 100%; min-height: 50%;" />
     <engine:VisualElement name="CombatantButtons" style="flex-grow: 1; right: 0; flex-direction: row-reverse; height: 50%; max-height: 50%; min-height: 50%; max-width: 50%; min-width: 50%; width: 50%; bottom: 0; position: absolute;" />
-    <engine:VisualElement name="CharInfoPanel" style="flex-grow: 1; position: absolute; top: 0; right: 0; height: 50%; width: 50%; max-height: 50%; max-width: 50%; min-height: 50%; min-width: 50%; text-overflow: ellipsis; white-space: pre-wrap;">
-        <engine:Label text="Label" name="CharInfo" style="flex-wrap: wrap;" />
+    <engine:VisualElement name="CharInfoPanel" enabled="true" style="flex-grow: 1; position: absolute; top: 0; right: 0; height: 50%; width: 50%; max-height: 50%; max-width: 50%; min-height: 50%; min-width: 50%; text-overflow: ellipsis; white-space: pre-wrap;">
+        <engine:Label name="CharInfo" style="flex-wrap: wrap;" />
     </engine:VisualElement>
     <engine:VisualElement name="AbilityInfoPanel" style="flex-grow: 1; top: 3px; position: absolute; right: 0; flex-wrap: wrap; height: 50%; max-height: 50%; min-height: 50%; width: 50%; max-width: 50%; min-width: 50%; flex-basis: auto; white-space: pre-wrap; text-overflow: ellipsis;">
         <engine:Label name="AbilityInfo" style="top: 0; flex-wrap: wrap;" />
     </engine:VisualElement>
-    <engine:TextField label="Text Field" placeholder-text="filler text" name="TextField" style="flex-basis: auto; width: 30%; max-width: 30%; min-width: 30%;" />
+    <engine:VisualElement name="MiddleCreationPanel" style="flex-grow: 1; position: absolute; width: 25%; height: 100%; max-width: 25%; max-height: 100%; min-width: 25%; min-height: 100%; top: 0; bottom: 0; left: auto; right: auto; align-self: center;" />
 </engine:UXML>
