--- a/Assets/My Assets/UI/UI_AtRuntime/mainUI.uxml
+++ b/Assets/My Assets/UI/UI_AtRuntime/mainUI.uxml
@@ -1,6 +1,9 @@
 <engine:UXML xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:engine="UnityEngine.UIElements" xmlns:editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
-    <engine:VisualElement name="LeftCreationPanel" style="flex-grow: 1; position: absolute; width: 50%; height: 100%; max-width: 50%; max-height: 100%; min-width: 50%; min-height: 100%; left: 0; align-items: flex-start; flex-wrap: wrap; align-content: auto; flex-basis: 2%;" />
-    <engine:VisualElement name="RightCreationPanel" style="flex-grow: 1; position: absolute; width: 50%; height: 100%; max-width: 50%; max-height: 100%; min-width: 25%; min-height: 100%; top: 0; bottom: 0; left: auto; right: 0; align-self: flex-end;">
+    <engine:VisualElement name="LeftCreationPanel" style="flex-grow: 1; position: absolute; width: 50%; height: 100%; max-width: 50%; max-height: 100%; min-width: 50%; min-height: 100%; left: 0; align-items: flex-start; flex-wrap: wrap; align-content: auto; flex-basis: 2%; white-space: pre-wrap;">
+        <engine:TextField placeholder-text="Enter Character Name " password="false" name="CharName" style="flex-wrap: wrap; white-space: pre-wrap; text-overflow: ellipsis; flex-direction: column; height: 40px; width: 176px;" />
+        <engine:TextField placeholder-text="Enter Character Description " password="false" name="CharDescription" multiline="true" style="flex-wrap: wrap; white-space: pre-wrap; max-width: 60%;" />
+    </engine:VisualElement>
+    <engine:VisualElement name="RightCreationPanel" style="flex-grow: 1; position: absolute; width: 50%; height: 100%; max-width: 50%; max-height: 100%; min-width: 25%; min-height: 100%; top: 0; bottom: 0; left: auto; right: 0; align-self: flex-end; -unity-text-align: upper-right;">
         <engine:Label name="CharCreationText" style="flex-wrap: wrap; align-self: flex-start; flex-basis: 100%; align-items: flex-start; width: 325px;" />
     </engine:VisualElement>
     <engine:VisualElement name="NarratorWindow" enabled="true" style="flex-grow: 1; top: 0; width: 100%; height: 50%; max-height: 50%; max-width: 100%; min-height: 50%; min-width: 50px;">
@@ -10,7 +13,7 @@
     <engine:VisualElement name="CharInfoPanel" enabled="true" style="flex-grow: 1; position: absolute; top: 0; right: 0; height: 50%; width: 50%; max-height: 50%; max-width: 50%; min-height: 50%; min-width: 50%; text-overflow: ellipsis; white-space: pre-wrap;">
         <engine:Label name="CharInfo" style="flex-wrap: wrap;" />
     </engine:VisualElement>
-    <engine:VisualElement name="PlayerOptions" style="flex-grow: 1; right: auto; flex-direction: row-reverse; height: 50%; max-height: 50%; min-height: 50%; max-width: 50%; min-width: 50%; width: 50%; bottom: 0; position: absolute; white-space: pre-wrap; flex-wrap: wrap; left: 0;" />
+    <engine:VisualElement name="PlayerOptions" style="flex-grow: 1; right: auto; flex-direction: row-reverse; height: 50%; max-height: 50%; min-height: 50%; max-width: 60%; min-width: 50%; width: 50%; bottom: 0; position: absolute; white-space: pre-wrap; flex-wrap: wrap; left: 0;" />
     <engine:VisualElement name="AbilityInfoPanel" style="flex-grow: 1; top: 3px; position: absolute; right: 0; flex-wrap: wrap; height: 50%; max-height: 50%; min-height: 50%; width: 50%; max-width: 50%; min-width: 50%; flex-basis: auto; white-space: pre-wrap; text-overflow: ellipsis;">
         <engine:Label name="AbilityInfo" style="top: 0; flex-wrap: wrap;" />
     </engine:VisualElement>
