--- a/Assets/My Assets/UI/UI_AtRuntime/mainUI.uxml
+++ b/Assets/My Assets/UI/UI_AtRuntime/mainUI.uxml
@@ -9,11 +9,11 @@
     <engine:VisualElement name="NarratorWindow" enabled="true" style="flex-grow: 1; top: 0; width: 100%; height: 50%; max-height: 50%; max-width: 100%; min-height: 50%; min-width: 50px;">
         <engine:Label name="NarratorText" style="height: 100%; max-height: 100%; min-height: 100%; flex-wrap: wrap;" />
     </engine:VisualElement>
-    <engine:VisualElement name="CombatantButtons" style="flex-grow: 1; right: 0; flex-direction: row-reverse; height: 50%; max-height: 50%; min-height: 50%; max-width: 50%; min-width: 50%; width: 50%; bottom: 0; position: absolute; white-space: pre-wrap; flex-wrap: wrap;" />
+    <engine:VisualElement name="CombatantButtons" style="flex-grow: 1; right: 0; flex-direction: column; height: 50%; max-height: 50%; min-height: 50%; max-width: 50%; min-width: 50%; width: 50%; bottom: 0; position: absolute; white-space: pre-wrap; flex-wrap: wrap;" />
     <engine:VisualElement name="CharInfoPanel" enabled="true" style="flex-grow: 1; position: absolute; top: 0; right: 0; height: 50%; width: 50%; max-height: 50%; max-width: 50%; min-height: 50%; min-width: 50%; text-overflow: ellipsis; white-space: pre-wrap;">
         <engine:Label name="CharInfo" style="flex-wrap: wrap;" />
     </engine:VisualElement>
-    <engine:VisualElement name="PlayerOptions" style="flex-grow: 1; right: auto; flex-direction: row-reverse; height: 50%; max-height: 50%; min-height: 50%; max-width: 60%; min-width: 50%; width: 50%; bottom: 0; position: absolute; white-space: pre-wrap; flex-wrap: wrap; left: 0;" />
+    <engine:VisualElement name="PlayerOptions" style="flex-grow: 1; right: auto; flex-direction: column; height: 50%; max-height: 50%; min-height: 50%; max-width: 60%; min-width: 50%; width: 50%; bottom: 0; position: absolute; white-space: normal; flex-wrap: wrap; left: 0;" />
     <engine:VisualElement name="AbilityInfoPanel" style="flex-grow: 1; top: 3px; position: absolute; right: 0; flex-wrap: wrap; height: 50%; max-height: 50%; min-height: 50%; width: 50%; max-width: 50%; min-width: 50%; flex-basis: auto; white-space: pre-wrap; text-overflow: ellipsis;">
         <engine:Label name="AbilityInfo" style="top: 0; flex-wrap: wrap;" />
     </engine:VisualElement>
