--- a/Assets/My Assets/UI/UI_AtRuntime/mainUI.uxml
+++ b/Assets/My Assets/UI/UI_AtRuntime/mainUI.uxml
@@ -3,8 +3,8 @@
         <engine:TextField placeholder-text="Enter Character Name " password="false" name="CharName" style="flex-wrap: wrap; white-space: pre-wrap; text-overflow: ellipsis; flex-direction: column; height: 40px; width: 176px;" />
         <engine:TextField placeholder-text="Enter Character Description " password="false" name="CharDescription" multiline="true" style="flex-wrap: wrap; white-space: pre-wrap; max-width: 60%;" />
     </engine:VisualElement>
-    <engine:VisualElement name="RightCreationPanel" style="flex-grow: 1; position: absolute; width: 50%; height: 100%; max-width: 50%; max-height: 100%; min-width: 25%; min-height: 100%; top: 0; bottom: 0; left: auto; right: 0; align-self: flex-end; -unity-text-align: upper-right;">
-        <engine:Label name="CharCreationText" style="flex-wrap: wrap; align-self: flex-start; flex-basis: 100%; align-items: flex-start; width: 325px;" />
+    <engine:VisualElement name="RightCreationPanel" style="flex-grow: 1; position: absolute; width: 50%; height: 100%; max-width: 50%; max-height: 100%; min-width: 25%; min-height: 100%; top: 0; bottom: 0; left: auto; right: 0; align-self: flex-end; -unity-text-align: upper-right; flex-wrap: wrap;">
+        <engine:Label name="CharCreationText" style="flex-wrap: wrap; align-self: flex-end; flex-basis: 100%; align-items: flex-end; width: 100%; max-width: 100%; min-width: 100%;" />
     </engine:VisualElement>
     <engine:VisualElement name="NarratorWindow" enabled="true" style="flex-grow: 1; top: 0; width: 100%; height: 50%; max-height: 50%; max-width: 100%; min-height: 50%; min-width: 50px;">
         <engine:Label name="NarratorText" style="height: 100%; max-height: 100%; min-height: 100%; flex-wrap: wrap;" />
